add_library(src kd_tree.c stl.c icp.c flood.cpp)
target_link_libraries(src m)
if(CMAKE_BUILD_TYPE MATCHES Debug)
    target_compile_definitions(src PUBLIC DEBUG=1)
    target_compile_options(src PUBLIC -ggdb -std=c++11)
else(CMAKE_BUILD_TYPE MATCHES Debug)
    target_compile_definitions(src PUBLIC DEBUG=0)
    target_compile_options(src PUBLIC -O3 -std=c++11)
endif(CMAKE_BUILD_TYPE MATCHES Debug)